# opentelemetry-instrumentation-eopf

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CONTRIBUTING.rst  NOTICE  README.md  get_pypi_latest_version.sh  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-code-quality.yml  deploy.yml  test.yml
src/opentelemetry/instrumentation/eopf/: __init__.py  eopf_otel.py  metrics.py  package.py  tracing.py
tests/: __init__.py  test_telemetry.py  trigger.yaml
tests/data/: gip_convert.json
tests/data/S1C_WV_OCN__2SSV_20260303T235156_20260303T235213_006606_00D543_14F1.SAFE/: manifest.safe
tests/data/S1C_WV_OCN__2SSV_20260303T235156_20260303T235213_006606_00D543_14F1.SAFE/measurement/: s1c-wv1-ocn-vv-20260303t235156-20260303t235159-006606-00d543-001.nc  s1c-wv2-ocn-vv-20260303t235210-20260303t235213-006606-00d543-002.nc
tests/data/S1C_WV_OCN__2SSV_20260303T235156_20260303T235213_006606_00D543_14F1.SAFE/preview/: map-overlay.kml  product-preview.html
tests/data/S1C_WV_OCN__2SSV_20260303T235156_20260303T235213_006606_00D543_14F1.SAFE/support/: s1-level-2-png.xsd
tests/data/S3B_OL_2_LFR____20260311T181307_20260311T181307_20260311T195128_0000_117_326_4320_ESA_O_NR_003.SEN3/: geo_coordinates.nc  gifapar.nc  instrument_data.nc  iwv.nc  lqsf.nc  otci.nc  rc_gifapar.nc  tie_geo_coordinates.nc  tie_geometries.nc  tie_meteo.nc  time_coordinates.nc  xfdumanifest.xml
tests/processor_template/: __init__.py  trigger.yaml
tests/processor_template/common/: __init__.py
tests/processor_template/computing/: __init__.py  my_processing_unit.py  my_processor.py  my_processor_pvi.py
tests/processor_template/computing/tasktable/: nominal.json
tests/processor_template/exceptions/: __init__.py  errors.py  warnings.py
