[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opentelemetry-instrumentation-eopf"
version = "0.2.2"
description = "OpenTelemetry eopf instrumentation"
readme = "README.rst"
authors = [{ name = "Airbus, CS Group" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "opentelemetry-api ~= 1.40",
  "opentelemetry-instrumentation == 0.61b0",
  "opentelemetry-semantic-conventions == 0.61b0"
]

[project.urls]
Homepage = "https://github.com/RS-PYTHON/opentelemetry-instrumentation-eopf"
Repository = "https://github.com/RS-PYTHON/opentelemetry-instrumentation-eopf"
Issues = "https://github.com/RS-PYTHON/opentelemetry-instrumentation-eopf/issues/"

[project.scripts]
eopf_otel = "opentelemetry.instrumentation.eopf.eopf_otel:main"

[project.optional-dependencies]
dev = [
    "opentelemetry-test-utils == 0.61b0",
    "defusedxml", # needed by eopf 2.7.0
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
    "pytest-socket",
    "pytest-instafail",
    "tox",
    "tox-uv",
    "twine",
    "wheel",
]
instruments = [
  "eopf >= 2.5.0",
]

[project.entry-points.opentelemetry_instrumentor]
eopf = "opentelemetry.instrumentation.eopf:EopfInstrumentor"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "NOTICE", "py.typed"]

[tool.pytest.ini_options]
addopts = "--color=yes"
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.uv]
cache-keys = [{ git = true }]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "C90", # mccabe (complexity)
    "I",   # isort
    "T20", # flake8-print
    "D1",  # pydocstyle - docstring presence only
]
ignore = [
    "E203", # Whitespace before '{symbol}'
    "E266", # Too many leading '#' for block comment
    "E501", # Line too long
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D105", # Missing docstring in magic method
]

[tool.ruff.lint.per-file-ignores]
"tests/context.py" = ["F401"] # F401: unused import
"tests/**.py" = ["D"]         # D: pydocstyle

[tool.ruff.lint.mccabe]
max-complexity = 18
